Fixed header spacing.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@
     display: grid;
     justify-content: space-between;
 
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
 
     grid-template-columns: 100%;
