--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,6 +5,8 @@
     display: flex;
     justify-content: space-between;
 
+    padding: 0 15px;
+
     background: #313131;
 }
 
